can-socket/tests/compile-fail/extended_id_too_high.rs
fn main() {
	let _id = can_socket::extended_id!(0x2000_0000);
}
